--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TODO.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
