--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -15,6 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
+    <add name="BooksContext" connectionString="Server=localhost;Database=Bookstore;Trusted_Connection=True;"/>
+    
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
