--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -15,8 +15,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="BooksContext" connectionString="Server=localhost;Database=Bookstore;Trusted_Connection=True;"/>
-    
+    <!--<add name="BooksContext" connectionString="Server=localhost;Database=Bookstore;Trusted_Connection=True;"/> -->
+   <!-- <add name="BooksContext" connectionString="Server=localhost; Database=Bookstore; Integrated Security=True;" providerName="System.Data.SqlClient" />-->
+    <add name="BooksContext" connectionString="Data Source=localhost; Initial Catalog=Bookstore; Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
