--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DAL\BookInitializer.cs" />
     <Compile Include="DAL\BooksContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
